--- a/06_TPO_Final_NodeJS/package.json
+++ b/06_TPO_Final_NodeJS/package.json
@@ -1,22 +1,21 @@
 {
   "name": "06_tpo_final_nodejs",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "Grupo 14 Fullstack NodeJS Codo a Codo",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Marcelo Anton - Noelia Lepifan - Adan Cuenca - Ignacio Mouano",
   "license": "ISC",
   "dependencies": {
-    "@faker-js/faker": "^8.4.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "init": "^0.1.2",
     "mysql2": "^3.10.0"
   },
   "devDependencies": {
-    "faker": "^5.5.3"
+    "@faker-js/faker": "^8.4.1"
   }
 }
