--- a/06_TPO_Final_NodeJS/package.json
+++ b/06_TPO_Final_NodeJS/package.json
@@ -4,7 +4,7 @@
   "description": "Grupo 14 Fullstack NodeJS Codo a Codo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --watch index.js"
   },
   "keywords": [],
   "author": "Marcelo Anton - Noelia Lepifan - Adan Cuenca - Ignacio Mouano",
