--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "express-session": "^1.18.0",
     "fontawesome": "5.6.3",
     "init": "0.1.2",
     "multer": "1.4.5-lts.1"
