--- a/06_TPO_Final_NodeJS/.env
+++ b/06_TPO_Final_NodeJS/.env
@@ -3,6 +3,7 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=password
 DB_NAME=db_tpo_nodejs
+DB_PORT=3306
 
 API_PORT=3000
-SECRET_KEY=l4pIcHul4g0rD4:/
+SECRET_KEY=Ds02xJBn9nGjJhgnzHKYQkcFnXuZU2hZ
