--- a/06_TPO_Final_NodeJS/package.json
+++ b/06_TPO_Final_NodeJS/package.json
@@ -4,6 +4,7 @@
   "description": "Grupo 14 Fullstack NodeJS Codo a Codo",
   "main": "index.js",
   "scripts": {
+    "type": "module",
     "dev": "node --watch index.js"
   },
   "keywords": [],
